--- a/contact-us.html
+++ b/contact-us.html
@@ -503,7 +503,7 @@
         `Industry: ${industry}\n` +
         `Phone: ${phoneCountry} ${phoneNumber}\n\n` +
         `Message:\n${message}\n\n` +
-        `Regards,\nWebsite Contact Form`
+        `Regards,\n${name}`
       );
 
       // Open default mail client with the composed email to demo@gail.com
