--- a/intel-automation-chages.html
+++ b/intel-automation-chages.html
@@ -196,30 +196,38 @@
                             networks process data from cameras, radar, and sensors to enable features like Autopilot and
                             Full Self-Driving. While still evolving, Tesla’s AI has logged billions of miles in
                             real-world testing, improving safety and paving the way for fully autonomous vehicles. </p>
+                        <br />
+                        <h2 class="">Finance: Enhancing Fraud Detection and Customer Service </h2>
+                        <br />
+                        <p>The financial sector has embraced AI to combat fraud and improve service delivery. “JPMorgan
+                            Chase” uses an AI-powered system called COiN (Contract Intelligence) to analyze legal
+                            documents.
+                            Previously, reviewing 12,000 commercial contracts took 360,000 hours annually. COiN reduced
+                            this
+                            to seconds per document, saving millions in labor costs while minimizing errors. This
+                            efficiency
+                            allows the bank to focus on strategic initiatives. </p>
+                        <br>
+                        <p>
+                            in fraud detection, “Mastercard” employs AI to analyze billions of transactions in real
+                            time.
+                            Its machine learning models identify suspicious patterns, such as unusual spending
+                            behaviors,
+                            with 98% accuracy, preventing billions in fraudulent transactions annually. Additionally,
+                            AI-powered chatbots at banks like “Bank of America” (via its virtual assistant, Erica)
+                            handle
+                            millions of customer inquiries, from balance checks to financial advice, improving response
+                            times and customer satisfaction.
+                        </p>
+                        <br>
                     </div>
                 </div>
                 <div class="col-lg-5">
                     <div>
                         <img src="images/intel-auto-changes-content.svg" alt="content">
                     </div>
-                    <h2 class="pt-5">Finance: Enhancing Fraud Detection and Customer Service </h2>
-                    <br />
-                    <p>The financial sector has embraced AI to combat fraud and improve service delivery. “JPMorgan
-                        Chase” uses an AI-powered system called COiN (Contract Intelligence) to analyze legal documents.
-                        Previously, reviewing 12,000 commercial contracts took 360,000 hours annually. COiN reduced this
-                        to seconds per document, saving millions in labor costs while minimizing errors. This efficiency
-                        allows the bank to focus on strategic initiatives. </p>
-                    <br>
-                    <p>
-                        in fraud detection, “Mastercard” employs AI to analyze billions of transactions in real time.
-                        Its machine learning models identify suspicious patterns, such as unusual spending behaviors,
-                        with 98% accuracy, preventing billions in fraudulent transactions annually. Additionally,
-                        AI-powered chatbots at banks like “Bank of America” (via its virtual assistant, Erica) handle
-                        millions of customer inquiries, from balance checks to financial advice, improving response
-                        times and customer satisfaction.
-                    </p>
-                    <br>
-                    <h2>
+
+                    <h2 class="pt-5">
                         Manufacturing: Optimizing Production and Maintenance
                     </h2>
                     <br />
@@ -238,6 +246,45 @@
                         emissions. These advancements highlight AI’s role in driving sustainability and cost-efficiency
                         in manufacturing.
                     </p>
+                    <br>
+                    <h2>Challenges and Considerations</h2><br />
+
+                    <p>
+                        While these success stories showcase AI’s potential, challenges remain. High implementation
+                        costs, data privacy concerns, and the need for skilled talent can hinder adoption. Ethical
+                        considerations, such as ensuring unbiased algorithms and transparent decision-making, are also
+                        critical. Enterprises must invest in robust data governance and workforce training to maximize
+                        AI’s benefits while mitigating risks.
+                    </p><br />
+
+                    <h2>The Future of AI Across Industries</h2><br />
+
+                    <p>
+                        As AI technologies like generative AI, edge computing, and real-time analytics advance, their
+                        impact will grow. By 2030, analysts predict that 80% of global enterprises will integrate AI
+                        into core operations, up from 40% in 2025. Industries will increasingly adopt
+                        “human-in-the-loop” AI systems, combining human expertise with AI’s scalability to drive
+                        innovation.
+                    </p><br />
+
+                    <p>
+                        To stay competitive, enterprises must prioritize strategic AI adoption, focusing on use cases
+                        that align with business goals. Collaboration between industries, governments, and tech
+                        providers will also be key to addressing ethical and regulatory challenges, ensuring AI delivers
+                        value responsibly.
+                    </p><br />
+
+                    <h2>Conclusion</h2><br />
+
+                    <p>
+                        AI is no longer a futuristic concept but a proven driver of transformation across industries.
+                        From improving patient outcomes in healthcare to optimizing supply chains in retail and
+                        preventing fraud in finance, AI’s real-world applications are delivering measurable results. As
+                        technology evolves and adoption accelerates, enterprises that harness AI strategically will lead
+                        their industries, creating a future where efficiency, innovation, and customer-centricity define
+                        success.
+                    </p><br />
+
 
                 </div>
             </div>
