--- a/blog.html
+++ b/blog.html
@@ -147,7 +147,7 @@
             <div class="cards-wrapper">
                 <!-- Card 1 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog.jpg" alt="Automation"/></div>
                     <h3>From Data to Action: Why Insights Alone Aren't Enough</h3>
                     <p class="date">June 11, 2025</p>
                     <a href="blog-automation.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
@@ -167,7 +167,7 @@
                 </div>
                 <!-- Card 2 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog1.jpg" alt="Automation"/></div>
                     <h3>How Intelligent Automation is Changing Enterprises</h3>
                     <p class="date">June 11, 2025</p>
                     <a href="blog-intelligent.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
@@ -186,7 +186,7 @@
                 </div>
                 <!-- Card 3 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog2.jpg" alt="Automation"/></div>
                     <h3>Real-World AI: Success Stories Across Industries</h3>
                     <p class="date">June 11, 2025</p>
                     <a href="intel-automation-chages.html" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
@@ -205,7 +205,7 @@
                 </div>
                 <!-- Card 4 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog3.jpg" alt="Automation"/></div>
                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
                     <p class="date">June 11, 2025</p>
                     <a href="#" class="read-more"><span><svg width="100" height="35" viewBox="0 0 100 35"
@@ -224,7 +224,7 @@
                 </div>
                 <!-- Card 5 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog4.jpg" alt="Automation"/></div>
                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
                     <p class="date">November 20, 2025</p>
                     <a href="#" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
@@ -243,7 +243,7 @@
                 </div>
                 <!-- Card 6 -->
                 <div class="card">
-                    <div class="image-placeholder"></div>
+                    <div class="image-placeholder"><img src="images/small-blog5.jpg" alt="Automation"/></div>
                     <h3>Lorem ipsum dolor sit amet, consectetur</h3>
                     <p class="date">November 20, 2025</p>
                     <a href="#" class="read-more"> <span><svg width="100" height="35" viewBox="0 0 100 35"
