platform mobile responsive

--- a/platform.html
+++ b/platform.html
@@ -270,60 +270,64 @@
         <div class="sticky-card" id="card1">
             <div class="card-header-tab header-tab-1">AdoptIQ</div>
             <div class="row">
-                <div class="card-content col-7 d-flex justify-content-center flex-column">
+                <div class="card-content col-md-7 d-flex justify-content-center flex-column">
                     <h5>AdoptIQ – Digital Adoption Analytics & Automation</h5>
                     <p>AdoptIQ helps you maximize ROI on your software investments through advanced digital adoption
                         analytics and in-app automation. It monitors user engagement across your organization's tools,
                         identifying adoption rates and pain points in real time. With these insights, you can deploy
                         in-app guidance or automated triggers to assist users exactly when they need help.</p>
                 </div>
-                <div class="card-image col-5"><img src="images/adoptIq.svg" alt="img" /></div>
+                <div class="d-flex mt-2 mb-2 justify-content-center d-md-none"><button class="explore-button ">Explore</button></div>
+                <div class="card-image col-5 d-none d-md-block m-auto"><img src="images/adoptIq.svg" alt="img" /></div>
             </div>
         </div>
 
         <div class="sticky-card" id="card2">
             <div class="card-header-tab header-tab2">AssistIQ</div>
             <div class="row">
-                <div class="card-content col-7 d-flex justify-content-center flex-column">
+                <div class="card-content col-md-7 d-flex justify-content-center flex-column">
                     <h5>AssistIQ – AI Assistant & Insights Co-Pilot</h5>
                     <p>AssistIQ is your intelligent AI-powered assistant that delivers deep contextual insights,
                         generates reports, and surfaces operational inefficiencies to accelerate decision-making. It
                         analyzes patterns across your business processes and provides actionable recommendations.</p>
                 </div>
-                <div class="card-image col-5"><img src="images/assistIQ.svg" alt="img" /></div>
+                 <div class="d-flex mt-2 mb-2 justify-content-center d-md-none"><button class="explore-button ">Explore</button></div>
+                <div class="card-image col-5 d-none d-md-block"><img src="images/assistIQ.svg" alt="img" /></div>
             </div>
         </div>
 
         <div class="sticky-card" id="card3">
             <div class="card-header-tab header-tab3">Contrakt AI</div>
             <div class="row">
-                <div class="card-content col-7 d-flex justify-content-center flex-column">
+                <div class="card-content col-md-7 d-flex justify-content-center flex-column">
                     <h5>Contrakt AI – Intelligent Legal Automation</h5>
                     <p>Contrakt AI automates legal workflows by intelligently analyzing contracts, extracting clauses,
                         and recommending actions. Reduce manual review time and improve compliance with AI-powered
                         contract intelligence that understands legal language and context.</p>
                 </div>
-                <div class="card-image col-5"><img src="images/contract.svg" alt="img" /></div>
+                 <div class="d-flex mt-2 mb-2 justify-content-center d-md-none"><button class="explore-button ">Explore</button></div>
+                <div class="card-image col-5 d-none d-md-block"><img src="images/contract.svg" alt="img" /></div>
             </div>
         </div>
 
         <div class="sticky-card" id="card4">
             <div class="card-header-tab header-tab4">MedUSA AI</div>
             <div class="row">
-                <div class="card-content col-7 d-flex justify-content-center flex-column">
+                <div class="card-content col-md-7 d-flex justify-content-center flex-column">
                     <h5>MedUSA AI – Healthcare Claims & RCM Automation</h5>
                     <p>MedUSA AI automates healthcare claims processing and revenue cycle management, improving
                         accuracy, reducing denials, and accelerating reimbursements. Advanced AI algorithms detect
                         patterns and anomalies to optimize your healthcare financial operations.</p>
                 </div>
-                <div class="card-image col-5"><img src="images/medusa.svg" alt="img" /></div>
+                 <div class="d-flex mt-2 mb-2 justify-content-center d-md-none"><button class="explore-button ">Explore</button></div>
+                <div class="card-image col-5 d-none d-md-block"><img src="images/medusa.svg" alt="img" /></div>
             </div>
         </div>
 
         <div class="sticky-card" id="card4">
             <div class="card-header-tab header-tab5">MedUSA AI</div>
             <div class="row">
-                <div class="card-content col-7 d-flex justify-content-center flex-column">
+                <div class="card-content col-md-7 d-flex justify-content-center flex-column">
                     <h5>UnifyX – Unified Enterprise Operations</h5>
                     <p>UnifyX centralizes and automates enterprise operations by connecting your disparate systems into
                         one unified workflow. It eliminates silos between departments, allowing data and tasks to flow
@@ -331,7 +335,8 @@
                         workflow automation, you gain end-to-end visibility and real-time control over processes –
                         reducing manual effort and accelerating outcomes.</p>
                 </div>
-                <div class="card-image col-5"><img src="images/unifyX.svg" alt="img" /></div>
+                 <div class="d-flex mt-2 mb-2 justify-content-center d-md-none"><button class="explore-button ">Explore</button></div>
+                <div class="card-image col-5 d-none d-md-block"><img src="images/unifyX.svg" alt="img" /></div>
             </div>
         </div>
 
@@ -364,9 +369,9 @@
                         platform and services consistently drive measurable value across your enterprise.
                     </p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 pt-3 pt-lg-0">
                     <div class="row g-3">
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 d-flex justify-content-center">
                             <div class="card-custom">
                                 <div class="d-flex justify-content-center gap-3 align-items-center">
                                     <img src="images/lowerrisk.svg" alt="Lower Risk" class="icon">
@@ -377,7 +382,7 @@
                                     ensuring stakeholder buy-in at each step.</p>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 d-flex justify-content-center">
                             <div class="card-custom">
                                 <div class="d-flex justify-content-center gap-3 align-items-center">
                                     <img src="images/fastertime.svg" alt="Faster Time-to-Value" class="icon">
@@ -388,7 +393,7 @@
                                     enterprise.</p>
                             </div>
                         </div>
-                        <div class="col-sm-6 ">
+                        <div class="col-sm-6 d-flex justify-content-center">
                             <div class="card-custom">
                                 <div class="d-flex justify-content-center gap-3 align-items-center">
                                     <img src="images/real-impact.svg" alt="Real-world Impact" class="icon">
@@ -399,7 +404,7 @@
                                     built to deliver measurable ROI.</p>
                             </div>
                         </div>
-                        <div class="col-sm-6">
+                        <div class="col-sm-6 d-flex justify-content-center">
                             <div class="card-custom">
                                 <div class="d-flex justify-content-center gap-3 align-items-center">
                                     <img src="images/scalableinnovation.svg" alt="Scalable Innovation" class="icon">
