add link and change responsive

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
     <nav class="navbar navbar-expand-xl navbar-custom">
       <div class="container-fluid navbar-content">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
-          <div class="brand-text">
+          <img src="images/logo-all.svg" alt="Aktionable.ai Logo" class="logo-img">
+          <!-- <div class="brand-text">
             <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
-          </div>
+          </div> -->
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -138,8 +138,8 @@
           enterprise impact.
         </p>
         <div class="cta-buttons">
-          <a href="#" class="btn btn-primary">Request a Demo</a>
-          <a href="#" class="btn btn-primary">Explore Platform</a>
+          <a href="contact-us.html" class="btn btn-primary">Request a Demo</a>
+          <a href="platform.html" class="btn btn-primary">Explore Platform</a>
         </div>
       </div>
     </div>
@@ -258,7 +258,7 @@
         <div class="feature-card">
           <img src="images/enterprise1.svg" alt="Generative AI Engine" />
           <h3>Generative AI Engine</h3>
-          <p>
+          <p class="pt-2">
             Built on state-of-the-art large language models and AI techniques that can generate, summarize, and analyze
             content intelligently – all tailored to your enterprise data.
           </p>
@@ -267,7 +267,7 @@
         <div class="feature-card">
           <img src="images/enterprise2.svg" alt="Unified Data & Integration" />
           <h3>Unified Data &<br /> Integration</h3>
-          <p>
+          <p class="pt-2">
             Pre-built connectors and APIs to unify data from your enterprise systems (ERP, CRM, databases, etc.),
             ensuring AI decisions are based on a complete, single source of truth.
           </p>
@@ -276,14 +276,14 @@
         <div class="feature-card">
           <img src="images/enterprise3.svg" alt="Scalable Deployment" />
           <h3>Scalable & Flexible<br /> Deployment</h3>
-          <p>
+          <p class="pt-2">
             Containerized, modular design that runs securely on your cloud or on-premises infrastructure. Scale
             seamlessly from pilot to full production with robust performance monitoring and management tools.
           </p>
         </div>
       </div>
 
-      <button class="cta-button">Explore our Platform</button>
+    <a href="platform.html"><button class="cta-button d-none d-md-block">Explore our Platform</button></a>
     </section>
 
 
@@ -322,7 +322,7 @@
     <section class="stats-section">
       <h2>AI That Means Business</h2>
       <p class="subheading">
-        Unlocking measurable business outcomes and real value<br />across industries
+        Unlocking measurable business outcomes and real value <br class="d-none d-xl-block" />across industries
       </p>
 
       <div class="stats-container">
@@ -427,7 +427,7 @@
 
     <section class="insights-section">
       <h2 class="pt-5">Insights That Power<br class="small-hide"> Action.</h2>
-      <p class="subheading">
+      <p class="subheading pb-5">
         Stay ahead with expert articles on AI, business automation, and actionable intelligence.
         Discover trends, tips, and real-world strategies to drive smarter decisions and better outcomes.
       </p>
@@ -485,7 +485,7 @@
           Ready to transform your enterprise with smarter AI?<br />
           Contact us to schedule a personalized demo or discuss your use case with our experts.
         </p>
-        <button class="contact-btn">Contact Now</button>
+      <a href="contact-us.html"> <button class="contact-btn">Contact Now</button></a> 
       </div>
     </section>
     <!-- 
@@ -554,7 +554,7 @@
                       <li><a href="#">
                           <h5>Terms of Use</h5>
                         </a></li>
-                      <li><a href="#">
+                      <li><a href="contact-us.html">
                           <h5>Contact Us</h5>
                         </a></li>
                       <a href="#" class="login-btn">Log In</a>
@@ -597,7 +597,7 @@
                 <div class="col-6 h-75 d-flex flex-column align-items-lg-start align-items-center">
                   <div class="logo-section">
                     <a class="navbar-brand d-flex justify-content-md-start justify-content-center align-items-lg-end align-items-center"
-                      href="#">
+                      href="index.html">
                       <img src="images/logo-large.png" alt="Aktionable.ai Logo" class="logo-img">
                       <div class="brand-text ">
                         <div class="brand-main">Aktionable AI</div>
@@ -621,7 +621,7 @@
                       <li><a href="#">
                           <h5>Terms of Use</h5>
                         </a></li>
-                      <li><a href="#">
+                      <li><a href="contact-us.html">
                           <h5>Contact Us</h5>
                         </a></li>
                       <a href="#" class="login-btn">Log In</a>
