--- a/service.html
+++ b/service.html
@@ -37,11 +37,11 @@
     <nav class="navbar navbar-expand-xl navbar-custom">
       <div class="container-fluid navbar-content">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
-          <div class="brand-text">
+           <img src="images/logo-all.svg" alt="Aktionable.ai Logo" class="logo-img">
+          <!-- <div class="brand-text">
             <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
-          </div>
+          </div> -->
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -138,7 +138,7 @@
           value.
         </p>
         <div class="cta-buttons">
-          <a href="#" class="btn btn-primary">Request Consultation</a>
+          <a href="contact-us.html" class="btn btn-primary">Request Consultation</a>
         </div>
       </div>
     </div>
@@ -351,7 +351,7 @@
                   </p>
                 </div>
                 <div class="cta-buttons">
-                  <a href="#" class="btn btn-primary">Schedule a Consultation</a>
+                  <a href="contact-us.html" class="btn btn-primary">Schedule a Consultation</a>
                 </div>
               </div>
             </div>
@@ -424,7 +424,7 @@
                         <li><a href="#">
                             <h5>Terms of Use</h5>
                           </a></li>
-                        <li><a href="#">
+                        <li><a href="contact-us.html">
                             <h5>Contact Us</h5>
                           </a></li>
                         <a href="#" class="login-btn">Log In</a>
@@ -492,7 +492,7 @@
                         <li><a href="#">
                             <h5>Terms of Use</h5>
                           </a></li>
-                        <li><a href="#">
+                        <li><a href="contact-us.html">
                             <h5>Contact Us</h5>
                           </a></li>
                         <a href="#" class="login-btn">Log In</a>
