--- a/blog.html
+++ b/blog.html
@@ -37,11 +37,11 @@
     <nav class="navbar navbar-expand-xl navbar-custom">
       <div class="container-fluid navbar-content">
         <a class="navbar-brand" href="index.html">
-          <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
-          <div class="brand-text">
+           <img src="images/logo-all.svg" alt="Aktionable.ai Logo" class="logo-img">
+          <!-- <div class="brand-text">
             <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
             <div class="brand-tagline">Smarter AI. Real Results</div>
-          </div>
+          </div> -->
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -284,7 +284,7 @@
                 Feel free to reach out – we’re happy to point you to the right resource
                 or have a conversation.
             </h2>
-            <button class="contact-btn">Contact Now</button>
+           <a href="contact-us.html"> <button class="contact-btn">Contact Now</button></a>
         </div>
     </section>
 
@@ -355,7 +355,7 @@
                       <li><a href="#">
                           <h5>Terms of Use</h5>
                         </a></li>
-                      <li><a href="#">
+                      <li><a href="contact-us.html">
                           <h5>Contact Us</h5>
                         </a></li>
                       <a href="#" class="login-btn">Log In</a>
@@ -422,7 +422,7 @@
                       <li><a href="#">
                           <h5>Terms of Use</h5>
                         </a></li>
-                      <li><a href="#">
+                      <li><a href="contact-us.html">
                           <h5>Contact Us</h5>
                         </a></li>
                       <a href="#" class="login-btn">Log In</a>
