--- a/platform.html
+++ b/platform.html
@@ -37,11 +37,11 @@
         <nav class="navbar navbar-expand-xl navbar-custom">
             <div class="container-fluid navbar-content">
                 <a class="navbar-brand" href="index.html">
-                    <img src="images/logo.svg" alt="Aktionable.ai Logo" class="logo-img">
-                    <div class="brand-text">
-                        <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
-                        <div class="brand-tagline">Smarter AI. Real Results</div>
-                    </div>
+                     <img src="images/logo-all.svg" alt="Aktionable.ai Logo" class="logo-img">
+          <!-- <div class="brand-text">
+            <div class="brand-main">A<div class="kt">kt</div>ionable AI</div>
+            <div class="brand-tagline">Smarter AI. Real Results</div>
+          </div> -->
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
@@ -136,7 +136,7 @@
                     The Aktionable.ai Platform empowers you to deploy responsible AI solutions quickly and confidently
                 </p>
                 <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary">Request Demo</a>
+                    <a href="contact-us.html" class="btn btn-primary">Request Demo</a>
                 </div>
             </div>
         </div>
@@ -444,7 +444,7 @@
 
                         </div>
                         <div class="cta-buttons pt-3">
-                            <a href="#" class="btn btn-primary">Request a Demo</a>
+                            <a href="contact-us.html" class="btn btn-primary">Request a Demo</a>
                         </div>
                     </div>
                 </div>
@@ -517,7 +517,7 @@
                                         <li><a href="#">
                                                 <h5>Terms of Use</h5>
                                             </a></li>
-                                        <li><a href="#">
+                                        <li><a href="contact-us.html">
                                                 <h5>Contact Us</h5>
                                             </a></li>
                                         <a href="#" class="login-btn">Log In</a>
